--- a/style.css
+++ b/style.css
@@ -14,14 +14,19 @@ body{
 
 #space{
     background-color:white;
-    margin-top:2%;
     margin-bottom:2%;
 }
 
 #blurb{
     font-size:150%;
+    margin-bottom:2%;
 }
 
 #YouTubeC{
-    width:30%;
+    width:32%;
+    margin-bottom:5%
+}
+
+.col-md-6 {
+    text-align: center;
 }
