Sticky Footer Done

--- a/about.css
+++ b/about.css
@@ -1,3 +1,10 @@
 body{
     background-color:#dbdbdb;
 }
+
+#description{
+    
+    font-family: 'Open Sans', sans-serif;
+    font-size:20px;
+    
+}
