--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
 #dp {
     border-radius:50%;
     width:25%;
-    border:8px solid #ffffff;
+    border:4px solid #fff;
 }
 
 body{
-    background-color:#CFCFCF;
+    
+    background-image:url(assets/background.png);
+    overflow-x: hidden;
 }
 
 #about{
     
-    -moz-transition: all .2s ease-in;
-    -o-transition: all .2s ease-in;
-    -webkit-transition: all .2s ease-in;
     transition: all .2s ease-in;
-    color:black;
-    border:2px solid #ffffff;
-    border-radius:15%;
+    color:white;
+    text-decoration:underline;
 }
 
 #about:hover{
-    
-    background-color:white;
-    
+    background-color: white;
+}
+
+#name{
+    color:white;
 }
 
 
@@ -34,6 +34,7 @@ body{
 #blurb{
     font-size:150%;
     margin-bottom:2%;
+    color:white;
 }
 
 #YouTubeC{
@@ -41,7 +42,49 @@ body{
     margin-bottom:5%
 }
 
-.col-md-6 {
-    text-align: center;
+#YouTubeC:hover{
+    
 }
 
+#cameraC{
+    width:32%;
+    margin-bottom:5%
+}
+
+#cameraC:hover{
+    
+}
+
+#soundcloudC{
+    width:32%;
+    margin-bottom:5%
+}
+
+#soundcloudC:hover{
+    
+}
+
+#subtitle{
+    color:white;
+}
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.navbar-fixed-top, .navbar-fixed-bottom {
+    /*position: fixed;*/
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    margin-bottom: 0;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
+}
