--- a/style.css
+++ b/style.css
@@ -88,3 +88,22 @@ body{
 ::-webkit-scrollbar { 
     display: none; 
 }
+
+#cf {
+  position:relative;
+  display:inline-block;
+  text-align:center;
+}
+
+#cf img {
+  position:absolute;
+  left:0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+#cf img.top:hover {
+  opacity:0;
+}
